--- a/index.html
+++ b/index.html
@@ -1611,10 +1611,6 @@
                 </font>
                 <br />
 
-
-
-
-
                 <A NAME="Services">
                     <h2><i class="fa fa-pencil-square-o" aria-hidden="true"></i>&nbsp;&nbsp;Services</h2>
                 </A>
@@ -1783,6 +1779,16 @@
                 <A NAME="Cooperation">
                     <h2><i class="fa fa-handshake-o" aria-hidden="true"></i>&nbsp;&nbsp;Cooperation</h2>
                 </A>
+                <font size="3">
+                    <ul>
+                        <li><a href="https://www.southampton.ac.uk/~sqc/" target="_blank">
+                            Sheng Chen
+                        </a>, University of Southampton, Fellow of the United Kingdom Royal Academy of Engineering, Fellow of IEEE, and fellow of IET.
+                            <!-- https://www.southampton.ac.uk/~sqc/ -->
+                        </li>
+
+                    </ul>
+                </font>
                 <br />
 
                 <A NAME="Association">
