--- a/index.html
+++ b/index.html
@@ -1781,12 +1781,20 @@
                 </A>
                 <font size="3">
                     <ul>
-                        <li><a href="https://www.southampton.ac.uk/~sqc/" target="_blank">
-                            Sheng Chen
-                        </a>, University of Southampton, Fellow of the United Kingdom Royal Academy of Engineering, Fellow of IEEE, and fellow of IET.
-                            <!-- https://www.southampton.ac.uk/~sqc/ -->
+                        <li><a href="https://www.southampton.ac.uk/~sqc/" target="_blank">Sheng Chen</a>, University of Southampton, Fellow of the United Kingdom Royal Academy of Engineering, Fellow of IEEE, and fellow of IET.
                         </li>
-
+                        <li><a href="https://www-mobile.ecs.soton.ac.uk/newcomms/?q=people/lh" target="_blank">Lajos Hanzo</a>, University of Southampton, Foreign Member of the Hungarian Science Academy, a Fellow of the Royal Academy of Engineering (FREng), lET, and EURASIP, and holds the Eric Sumner Field Award.
+                        </li>
+                        <li><a href="http://www2.ee.unsw.edu.au/~derrick/index.html" target="_blank">Derrick Wing Kwan Ng</a>, University of New South Wales, Fellow of IEEE.
+                        </li>
+                        <li><a href="https://scholar.google.it/citations?user=5dRt0OoAAAAJ&hl=fr&oi=ao" target="_blank">Marco Di Renzo</a>, CNRS & Paris-Saclay University, IEEE Fellow, Editor-in-Chief of <span style="font-variant-caps: small-caps;">IEEE Commun. Lett.</span>
+                        </li>
+                        <li><a href="https://scholar.google.com/citations?hl=zh-CN&user=HqIyyXcAAAAJ" target="_blank">Mohamed-Slim Alouini</a>, King Abdullah University of Science and Technology, Fellow of IEEE.
+                        </li>
+                        <li><a href="https://www.ee.ucl.ac.uk/~kwong/" target="_blank">Kai-Kit Wong</a>, University College London, Fellow of IEEE.
+                        </li>
+                        <li><a href="https://www.tf.fau.eu/person/schober-robert/" target="_blank">Robert Schober</a>, Friedrich-Alexander-Universiat Erlangen-Nurnberg, Fellow of IEEE.
+                        </li>
                     </ul>
                 </font>
                 <br />
