--- a/index.html
+++ b/index.html
@@ -1779,11 +1779,15 @@
                 <A NAME="Cooperation">
                     <h2><i class="fa fa-handshake-o" aria-hidden="true"></i>&nbsp;&nbsp;Cooperation</h2>
                 </A>
+                
                 <font size="3">
                     <ul>
-                        <li><a href="https://www.southampton.ac.uk/~sqc/" target="_blank">Sheng Chen</a>, University of Southampton, Fellow of the United Kingdom Royal Academy of Engineering, Fellow of IEEE, and fellow of IET.
+                        <font color="#99a2aa">Ranking in no particular order</font>
+                        <li>
+                            Sheng Chen[<a href="http://scholar.google.co.uk/citations?user=ZikGt_kAAAAJ&hl=en%22%22" target="_blank">Google Scholar</a>][<a href="https://www.southampton.ac.uk/~sqc/" target="_blank">Homepage</a>], University of Southampton, Fellow of the United Kingdom Royal Academy of Engineering, Fellow of IEEE, and fellow of IET.
                         </li>
-                        <li><a href="https://www-mobile.ecs.soton.ac.uk/newcomms/?q=people/lh" target="_blank">Lajos Hanzo</a>, University of Southampton, Foreign Member of the Hungarian Science Academy, a Fellow of the Royal Academy of Engineering (FREng), lET, and EURASIP, and holds the Eric Sumner Field Award.
+                        <li>
+                            Lajos Hanzo[<a href="https://scholar.google.com/citations?hl=en&user=p0jnEW0AAAAJ" target="_blank">Google Scholar</a>][<a href="https://www-mobile.ecs.soton.ac.uk/newcomms/?q=people/lh" target="_blank">Homepage</a>], University of Southampton, Foreign Member of the Hungarian Science Academy, a Fellow of the Royal Academy of Engineering (FREng), lET, and EURASIP, and holds the Eric Sumner Field Award.
                         </li>
                         <li><a href="http://www2.ee.unsw.edu.au/~derrick/index.html" target="_blank">Derrick Wing Kwan Ng</a>, University of New South Wales, Fellow of IEEE.
                         </li>
