--- a/index.html
+++ b/index.html
@@ -75,11 +75,11 @@
             </A>
             <ul id="latestnews">
                 <li> <b>
-                    <font color="#FF0000">[2022.06]</font>
-                </b> Yang Wang and Shicong Liu got internship offer of Meituan and ByteDance in related fields (
-                <a href="" target="_blank">
-                    <font>王洋和刘仕聪分别获美团和字节跳动相关方向实习offer</font>
-                </a>)
+                        <font color="#FF0000">[2022.06]</font>
+                    </b> Yang Wang and Shicong Liu got internship offer of Meituan and ByteDance in related fields (
+                    <a href="" target="_blank">
+                        <font>王洋和刘仕聪分别获美团和字节跳动相关方向实习offer</font>
+                    </a>)
                 </li>
 
                 <li> <b>
@@ -629,7 +629,8 @@
             <font size="3">
                 <ul>
                     <p style="text-indent: -1.5rem;margin-left: 0rem;">
-                        <span>[1] <b>Zhen Gao</b>, Malong Ke, Li Qiao, and Yikun Mei, "Massive IoT Access for 6G", Springer Presss. 
+                        <span>[1] <b>Zhen Gao</b>, Malong Ke, Li Qiao, and Yikun Mei, "Massive IoT Access for 6G",
+                            Springer Presss.
                             [<a href="https://link.springer.com/book/10.1007/978-981-19-2704-1" target="_blank">Buy</a>]
                         </span>
                     </p>
@@ -1779,25 +1780,51 @@
                 <A NAME="Cooperation">
                     <h2><i class="fa fa-handshake-o" aria-hidden="true"></i>&nbsp;&nbsp;Cooperation</h2>
                 </A>
-                
+
                 <font size="3">
                     <ul>
                         <font color="#99a2aa">Ranking in no particular order</font>
                         <li>
-                            Sheng Chen[<a href="http://scholar.google.co.uk/citations?user=ZikGt_kAAAAJ&hl=en%22%22" target="_blank">Google Scholar</a>][<a href="https://www.southampton.ac.uk/~sqc/" target="_blank">Homepage</a>], University of Southampton, Fellow of the United Kingdom Royal Academy of Engineering, Fellow of IEEE, and fellow of IET.
+                            Sheng Chen, University of Southampton, Fellow of the United Kingdom Royal Academy of
+                            Engineering, Fellow of IEEE, and fellow of IET.[<a
+                                href="http://scholar.google.co.uk/citations?user=ZikGt_kAAAAJ&hl=en%22%22"
+                                target="_blank">Google Scholar</a>][<a href="https://www.southampton.ac.uk/~sqc/"
+                                target="_blank">Homepage</a>]
                         </li>
                         <li>
-                            Lajos Hanzo[<a href="https://scholar.google.com/citations?hl=en&user=p0jnEW0AAAAJ" target="_blank">Google Scholar</a>][<a href="https://www-mobile.ecs.soton.ac.uk/newcomms/?q=people/lh" target="_blank">Homepage</a>], University of Southampton, Foreign Member of the Hungarian Science Academy, a Fellow of the Royal Academy of Engineering (FREng), lET, and EURASIP, and holds the Eric Sumner Field Award.
+                            Lajos Hanzo, University of Southampton, Foreign Member of the Hungarian Science Academy, a
+                            Fellow of the Royal Academy of Engineering (FREng), lET, and EURASIP, and holds the Eric
+                            Sumner Field Award.[<a href="https://scholar.google.com/citations?hl=en&user=p0jnEW0AAAAJ"
+                                target="_blank">Google Scholar</a>][<a
+                                href="https://www-mobile.ecs.soton.ac.uk/newcomms/?q=people/lh"
+                                target="_blank">Homepage</a>]
                         </li>
-                        <li><a href="http://www2.ee.unsw.edu.au/~derrick/index.html" target="_blank">Derrick Wing Kwan Ng</a>, University of New South Wales, Fellow of IEEE.
+                        <li>
+                            Derrick Wing Kwan Ng, University of New South Wales, Fellow of IEEE.[<a
+                                href="https://scholar.google.ca/citations?user=NUJSHxoAAAAJ&hl=en"
+                                target="_blank">Google Scholar</a>][<a
+                                href="http://www2.ee.unsw.edu.au/~derrick/index.html" target="_blank">Homepage</a>]
                         </li>
-                        <li><a href="https://scholar.google.it/citations?user=5dRt0OoAAAAJ&hl=fr&oi=ao" target="_blank">Marco Di Renzo</a>, CNRS & Paris-Saclay University, IEEE Fellow, Editor-in-Chief of <span style="font-variant-caps: small-caps;">IEEE Commun. Lett.</span>
+                        <li>Marco Di Renzo, CNRS & Paris-Saclay University, IEEE Fellow,
+                            Editor-in-Chief of <span style="font-variant-caps: small-caps;">IEEE Commun. Lett.</span>[<a
+                                href="https://scholar.google.it/citations?user=5dRt0OoAAAAJ&hl=fr&oi=ao"
+                                target="_blank">Google Scholar</a>]
                         </li>
-                        <li><a href="https://scholar.google.com/citations?hl=zh-CN&user=HqIyyXcAAAAJ" target="_blank">Mohamed-Slim Alouini</a>, King Abdullah University of Science and Technology, Fellow of IEEE.
+                        <li>
+                            Mohamed-Slim Alouini, King Abdullah University of Science and
+                            Technology, Fellow of IEEE.[<a
+                                href="https://scholar.google.com/citations?hl=zh-CN&user=HqIyyXcAAAAJ"
+                                target="_blank">Google Scholar</a>]
                         </li>
-                        <li><a href="https://www.ee.ucl.ac.uk/~kwong/" target="_blank">Kai-Kit Wong</a>, University College London, Fellow of IEEE.
+                        <li>Kai-Kit Wong, University College London, Fellow of IEEE.[<a
+                                href="https://scholar.google.com.hk/citations?user=kVhcY0gAAAAJ&hl=zh-CN&oi=ao"
+                                target="_blank">Google Scholar</a>][<a href="https://www.ee.ucl.ac.uk/~kwong/"
+                                target="_blank">Homepage</a>]
                         </li>
-                        <li><a href="https://www.tf.fau.eu/person/schober-robert/" target="_blank">Robert Schober</a>, Friedrich-Alexander-Universiat Erlangen-Nurnberg, Fellow of IEEE.
+                        <li>Robert Schober, Friedrich-Alexander-Universiat Erlangen-Nurnberg, Fellow of IEEE.[<a
+                            href="https://scholar.google.com.hk/citations?user=Uu0BpX8AAAAJ&hl=zh-CN&oi=ao"
+                            target="_blank">Google Scholar</a>][<a href="https://www.tf.fau.eu/person/schober-robert/"
+                            target="_blank">Homepage</a>]
                         </li>
                     </ul>
                 </font>
