--- a/index.html
+++ b/index.html
@@ -676,6 +676,15 @@
                 </b>: </p>
             <font size="3">
                 <ul>
+                    <!--  -->
+                    <p style="text-indent: -2.0rem;margin-left: 0rem;">
+                        <span>[40] Z. Wan, <b>Z. Gao</b>, M. D. Renzo and L. Hanzo, "The Road to Industry 4.0 and Beyond: A
+                            Communications-, Information-, and Operation Technology Collaboration Perspective," in IEEE
+                            Network, doi: 10.1109/MNET.008.2100484. (Early Access)
+                            [<a href="https://ieeexplore.ieee.org/document/9839641" target="_blank">IEEE URL</a>]
+                        </span>
+                    </p>
+
                     <p style="text-indent: -2.0rem;margin-left: 0rem;">
                         <span>[39] X. Zhou, K. Ying, S. Liu, M. Ke, <b>Z. Gao</b> and M.-S. Alouini, "Reconfigurable
                             intelligent surface assisted grant-free massive access," in Intelligent and Converged
@@ -1822,9 +1831,9 @@
                                 target="_blank">Homepage</a>]
                         </li>
                         <li>Robert Schober, Friedrich-Alexander-Universiat Erlangen-Nurnberg, Fellow of IEEE.[<a
-                            href="https://scholar.google.com.hk/citations?user=Uu0BpX8AAAAJ&hl=zh-CN&oi=ao"
-                            target="_blank">Google Scholar</a>][<a href="https://www.tf.fau.eu/person/schober-robert/"
-                            target="_blank">Homepage</a>]
+                                href="https://scholar.google.com.hk/citations?user=Uu0BpX8AAAAJ&hl=zh-CN&oi=ao"
+                                target="_blank">Google Scholar</a>][<a
+                                href="https://www.tf.fau.eu/person/schober-robert/" target="_blank">Homepage</a>]
                         </li>
                     </ul>
                 </font>
