--- a/index.html
+++ b/index.html
@@ -113,9 +113,7 @@
                     <font color="#FF0000">Invited Paper</font> of Xingyu Zhou was accepted by <b>Intelligent and
                         Converged Networks</b>(
                     <a href="" target="_blank">
-                        <font>周星宇特邀论文被ICN期刊录用并获得期刊<b>
-                                <font color="#FF0000">8000</font>
-                            </b>元奖励</font>
+                        <font>周星宇特邀论文被ICN期刊录用</font>
                     </a>)【智能透射表面辅助的免授权海量接入】
                 </li>
 
