--- a/index.html
+++ b/index.html
@@ -630,6 +630,7 @@
                         <span>[1] <b>Zhen Gao</b>, Malong Ke, Li Qiao, and Yikun Mei, "Massive IoT Access for 6G",
                             Springer Presss.
                             [<a href="https://link.springer.com/book/10.1007/978-981-19-2704-1" target="_blank">Buy</a>]
+                            [<a href="https://item.jd.com/10057073503285.html" target="_blank">京东</a>]
                         </span>
                     </p>
 
