--- a/index.html
+++ b/index.html
@@ -75,6 +75,14 @@
             </A>
             <ul id="latestnews">
                 <li> <b>
+                        <font color="#FF0000">[2022.08]</font>
+                    </b> Zhen Gao was awarded First Prize by Chinese Institute of Command and Control (
+                    <a href="" target="_blank">
+                        <font>高镇获中国指挥与控制协会科学技术进步一等奖</font>
+                    </a>)
+                </li>
+
+                <li> <b>
                         <font color="#FF0000">[2022.06]</font>
                     </b> Yang Wang and Shicong Liu got internship offer of Meituan and ByteDance in related fields (
                     <a href="" target="_blank">
@@ -677,7 +685,8 @@
                 <ul>
                     <!--  -->
                     <p style="text-indent: -2.0rem;margin-left: 0rem;">
-                        <span>[40] Z. Wan, <b>Z. Gao</b>, M. D. Renzo and L. Hanzo, "The Road to Industry 4.0 and Beyond: A
+                        <span>[40] Z. Wan, <b>Z. Gao</b>, M. D. Renzo and L. Hanzo, "The Road to Industry 4.0 and
+                            Beyond: A
                             Communications-, Information-, and Operation Technology Collaboration Perspective," in IEEE
                             Network, doi: 10.1109/MNET.008.2100484. (Early Access)
                             [<a href="https://ieeexplore.ieee.org/document/9839641" target="_blank">IEEE URL</a>]
