--- a/index.html
+++ b/index.html
@@ -76,6 +76,14 @@
             <ul id="latestnews">
                 <li> <b>
                         <font color="#FF0000">[2022.08]</font>
+                    </b> Minghui Wu, Yifei Zhang, and Yang Wang are awarded Second Prize in the North China Division of the Graduate Electronic Design Competition (
+                    <a href="" target="_blank">
+                        <font>吴铭晖,张翼飞和王洋获得“兆易创新杯”第十七届中国研究生电子设计竞赛华北赛区二等奖</font>
+                    </a>)
+                </li>
+
+                <li> <b>
+                        <font color="#FF0000">[2022.08]</font>
                     </b> Zhen Gao was awarded First Prize by Chinese Institute of Command and Control (
                     <a href="" target="_blank">
                         <font>高镇获中国指挥与控制协会科学技术进步一等奖</font>
