--- a/index.html
+++ b/index.html
@@ -76,7 +76,8 @@
             <ul id="latestnews">
                 <li> <b>
                         <font color="#FF0000">[2022.08]</font>
-                    </b> Minghui Wu, Yifei Zhang, and Yang Wang are awarded Second Prize in the North China Division of the Graduate Electronic Design Competition (
+                    </b> Minghui Wu, Yifei Zhang, and Yang Wang are awarded Second Prize in the North China Division of
+                    the Graduate Electronic Design Competition (
                     <a href="" target="_blank">
                         <font>吴铭晖,张翼飞和王洋获得“兆易创新杯”第十七届中国研究生电子设计竞赛华北赛区二等奖</font>
                     </a>)
@@ -158,64 +159,66 @@
                     </a>)
                 </li>
 
-                <li> <b>
-                        <font color="#FF0000">[2022.02]</font>
-                    </b> Paper of Minghui Wu was accepted by <b>IEEE Journal on Selected Areas in Communications</b> (
-                    <a href="https://arxiv.org/abs/2201.06778" target="_blank">
-                        <font>吴铭晖 论文被JSAC(<b>IF=9.144</b>)期刊录用</font>
-                    </a>)
-                </li>
-
-                <li> <b>
-                        <font color="#FF0000">[2022.01]</font>
-                    </b> Prof. Gao was awarded <font color="#FF0000">First Prize</font> in Natural Science by Chinese
-                    Institute of Electronics (CIE) (
-                    <a href="https://www.cie.org.cn/system/upload/file/20220112/1641979738101073.pdf" target="_blank">
-                        <font>高镇被中国电子学会授予自然科学一等奖（空基高维时变信道下阵列宽带传输理论与方法）</font>
-                    </a>)
-                </li>
-
-                <li> <b>
-                        <font color="#FF0000">[2022.01]</font>
-                    </b> Dr. Gao was invited as the <b>Associate Editor</b> of IEEE Systems Journal (
-                    <a href=" " target="_blank">
-                        <font>高镇入选重要期刊IEEE Systems Journal编委</font>
-                    </a>)
-                </li>
-
-                <li> <b>
-                        <font color="#FF0000">[2021.12]</font>
-                    </b> Paper of Li Qiao was accepted by IEEE Journal on Selected Areas in Communications(
-                    <a href=" " target="_blank">
-                        <font>乔力 论文被JSAC(<b>IF=9.144</b>)期刊录用</font>
-                    </a>)
-                </li>
-                <li> <b>
-                        <font color="#FF0000">[2021.11]</font>
-                    </b> Li Qiao (SMC, ￥5,000), Zhuoran Li (Ceyear, ￥5,000), and Yifei Zhang (Diwen, ￥10,000) are
-                    awarded Social Scholarship(
-                    <a href=" " target="_blank">
-                        <font>乔力,李卓然和张翼飞获社会捐助类奖学金</font>
-                    </a>)
-                </li>
-                <li> <b>
-                        <font color="#FF0000">[2021.11]</font>
-                    </b> Yang Wang is awarded Xiaomi Special Scholarship (￥20,000)(
-                    <a href=" " target="_blank">
-                        <font>王洋获小米特等奖学金</font>
-                    </a>)
-                </li>
-                <li> <b>
-                        <font color="#FF0000">[2021.11]</font>
-                    </b> M.S. students Minghui Wu, Shicong Liu and Yang Wang are awarded Third Prize in Wireless AI
-                    Competition(
-                    <a href="https://mp.weixin.qq.com/s/OuTtATdeKc5t3hTKJhWvDQ" target="_blank">
-                        <font>硕士生吴铭晖,刘仕聪和王洋获得无线通信AI竞赛三等奖</font>
-                    </a>)
-                </li>
-
                 <details>
                     <summary>View More Earlier News</summary>
+                    <li> <b>
+                            <font color="#FF0000">[2022.02]</font>
+                        </b> Paper of Minghui Wu was accepted by <b>IEEE Journal on Selected Areas in Communications</b>
+                        (
+                        <a href="https://arxiv.org/abs/2201.06778" target="_blank">
+                            <font>吴铭晖 论文被JSAC(<b>IF=9.144</b>)期刊录用</font>
+                        </a>)
+                    </li>
+
+                    <li> <b>
+                            <font color="#FF0000">[2022.01]</font>
+                        </b> Prof. Gao was awarded <font color="#FF0000">First Prize</font> in Natural Science by
+                        Chinese
+                        Institute of Electronics (CIE) (
+                        <a href="https://www.cie.org.cn/system/upload/file/20220112/1641979738101073.pdf"
+                            target="_blank">
+                            <font>高镇被中国电子学会授予自然科学一等奖（空基高维时变信道下阵列宽带传输理论与方法）</font>
+                        </a>)
+                    </li>
+
+                    <li> <b>
+                            <font color="#FF0000">[2022.01]</font>
+                        </b> Dr. Gao was invited as the <b>Associate Editor</b> of IEEE Systems Journal (
+                        <a href=" " target="_blank">
+                            <font>高镇入选重要期刊IEEE Systems Journal编委</font>
+                        </a>)
+                    </li>
+
+                    <li> <b>
+                            <font color="#FF0000">[2021.12]</font>
+                        </b> Paper of Li Qiao was accepted by IEEE Journal on Selected Areas in Communications(
+                        <a href=" " target="_blank">
+                            <font>乔力 论文被JSAC(<b>IF=9.144</b>)期刊录用</font>
+                        </a>)
+                    </li>
+                    <li> <b>
+                            <font color="#FF0000">[2021.11]</font>
+                        </b> Li Qiao (SMC, ￥5,000), Zhuoran Li (Ceyear, ￥5,000), and Yifei Zhang (Diwen, ￥10,000) are
+                        awarded Social Scholarship(
+                        <a href=" " target="_blank">
+                            <font>乔力,李卓然和张翼飞获社会捐助类奖学金</font>
+                        </a>)
+                    </li>
+                    <li> <b>
+                            <font color="#FF0000">[2021.11]</font>
+                        </b> Yang Wang is awarded Xiaomi Special Scholarship (￥20,000)(
+                        <a href=" " target="_blank">
+                            <font>王洋获小米特等奖学金</font>
+                        </a>)
+                    </li>
+                    <li> <b>
+                            <font color="#FF0000">[2021.11]</font>
+                        </b> M.S. students Minghui Wu, Shicong Liu and Yang Wang are awarded Third Prize in Wireless AI
+                        Competition(
+                        <a href="https://mp.weixin.qq.com/s/OuTtATdeKc5t3hTKJhWvDQ" target="_blank">
+                            <font>硕士生吴铭晖,刘仕聪和王洋获得无线通信AI竞赛三等奖</font>
+                        </a>)
+                    </li>
                     <li> <b>
                             <font color="#FF0000">[2021.10]</font>
                         </b> Ph.D. students Anwen Liao, Malong Ke, Ziwei Wan and M.S. student Shicong Liu are awarded
