--- a/index.html
+++ b/index.html
@@ -21,8 +21,13 @@
 
 
 <body>
-
+    <div class="center">
+        <span class="center_text">
+            Powered by <a href="https://scliubit.github.io" target="_blank">Shicong Liu</a>
+        </span>
+    </div>
     <a id="home" class="anchor"></a>
+
     <div id="container">
         <div class="container">
 
