--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 <body>
     <div class="center">
         <span class="center_text">
-            Powered by <a href="https://scliubit.github.io" target="_blank">Shicong Liu</a>
+            Powered by <a href="https://scliubit.github.io/cv_en" target="_blank">Shicong Liu</a>
         </span>
     </div>
     <a id="home" class="anchor"></a>
