--- a/index.html
+++ b/index.html
@@ -80,6 +80,14 @@
             </A>
             <ul id="latestnews">
                 <li> <b>
+                        <font color="#FF0000">[2022.09]</font>
+                    </b> Paper of Ziwei Wan was accepted by IEEE Trans. Wireless Communications (
+                    <a href="" target="_blank">
+                        <font>万子维 论文被IEEE TWC (IF=8.346)期刊录用</font>
+                    </a>)【毫米波MIMO通感一体化】
+                </li>
+
+                <li> <b>
                         <font color="#FF0000">[2022.08]</font>
                     </b> Minghui Wu, Yifei Zhang, and Yang Wang are awarded Second Prize in the North China Division of
                     the Graduate Electronic Design Competition (
