--- a/index.html
+++ b/index.html
@@ -79,6 +79,15 @@
                 <h2><i class="fa fa-newspaper-o"></i>&nbsp;&nbsp;Latest News</h2>
             </A>
             <ul id="latestnews">
+                
+                <li> <b>
+                        <font color="#FF0000">[2022.09]</font>
+                    </b> One Paper was accepted by IEEE Trans. Vehicular Technology (
+                    <a href="" target="_blank">
+                        <font>IF = 6.239</font>
+                    </a>)【毫米波太赫兹MIMO超级上行接入】
+                </li>
+
                 <li> <b>
                         <font color="#FF0000">[2022.09]</font>
                     </b> Paper of Ziwei Wan was accepted by IEEE Trans. Wireless Communications (
