--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 
 <body>
     <div class="center">
+        <br>
         <span class="center_text">
             Powered by <a href="https://scliubit.github.io/cv_en" target="_blank">Shicong Liu</a>
         </span>
@@ -79,7 +80,7 @@
                 <h2><i class="fa fa-newspaper-o"></i>&nbsp;&nbsp;Latest News</h2>
             </A>
             <ul id="latestnews">
-                
+
                 <li> <b>
                         <font color="#FF0000">[2022.09]</font>
                     </b> One Paper was accepted by IEEE Trans. Vehicular Technology (
@@ -716,7 +717,15 @@
                 </b>: </p>
             <font size="3">
                 <ul>
-                    <!--  -->
+                    <!-- https://ieeexplore.ieee.org/abstract/document/9737291 -->
+                    <p style="text-indent: -2.0rem;margin-left: 0rem;">
+                        <span>[41] J. Huang, Y. Yang, Z. Gao, D. He and D. W. K. Ng, "Dynamic Spectrum Access for
+                            D2D-Enabled Internet of Things: A Deep Reinforcement Learning Approach," in IEEE Internet of
+                            Things Journal, vol. 9, no. 18, pp. 17793-17807, 15 Sept.15, 2022.
+                            [<a href="https://ieeexplore.ieee.org/abstract/document/9737291" target="_blank">IEEE URL</a>]
+                        </span>
+                    </p>
+
                     <p style="text-indent: -2.0rem;margin-left: 0rem;">
                         <span>[40] Z. Wan, <b>Z. Gao</b>, M. D. Renzo and L. Hanzo, "The Road to Industry 4.0 and
                             Beyond: A
