--- a/index.html
+++ b/index.html
@@ -719,6 +719,12 @@
                 <ul>
                     <!-- https://ieeexplore.ieee.org/abstract/document/9737291 -->
                     <p style="text-indent: -2.0rem;margin-left: 0rem;">
+                        <span>[42] Z. Gao, Z. Wan, D. Zheng, S. Tan, C. Masouros, D. W. K. Ng, and S. Chen, "Integrated Sensing and Communication with mmWave Massive MIMO: A Compressed Sampling Perspective," accepted by IEEE Transactions on Wireless Communications, vol. 9, no. 18, pp. 17793-17807, 15 Sept.15, 2022.
+                            [<a href="https://arxiv.org/pdf/2201.05766.pdf" target="_blank">arXiv</a>]
+                        </span>
+                    </p>
+                    
+                    <p style="text-indent: -2.0rem;margin-left: 0rem;">
                         <span>[41] J. Huang, Y. Yang, Z. Gao, D. He and D. W. K. Ng, "Dynamic Spectrum Access for
                             D2D-Enabled Internet of Things: A Deep Reinforcement Learning Approach," in IEEE Internet of
                             Things Journal, vol. 9, no. 18, pp. 17793-17807, 15 Sept.15, 2022.
