--- a/index.html
+++ b/index.html
@@ -670,7 +670,7 @@
                 <ul>
                     <p style="text-indent: -1.5rem;margin-left: 0rem;">
                         <span>[1] <b>Zhen Gao</b>, Malong Ke, Li Qiao, and Yikun Mei, "Massive IoT Access for 6G",
-                            Springer Presss.
+                            Springer Press.
                             [<a href="https://link.springer.com/book/10.1007/978-981-19-2704-1" target="_blank">Buy</a>]
                             [<a href="https://item.jd.com/10057073503285.html" target="_blank">京东</a>]
                         </span>
@@ -679,7 +679,7 @@
                     <p style="text-indent: -1.5rem;margin-left: 0rem;">
                         <span>[2] <b>Zhen Gao</b>, Linglong Dai, Xinyu Gao, and Zhaocheng Wang, "Channel estimation in
                             mmWave massive MIMO systems", Chapter 6 of book <i>MmWave Massive MIMO: A paradigm for
-                                5G</i>, Elsevier Presss.
+                                5G</i>, Elsevier Press.
                         </span>
                     </p>
 
