--- a/index.html
+++ b/index.html
@@ -83,6 +83,13 @@
 
                 <li> <b>
                         <font color="#FF0000">[2022.09]</font>
+                    </b> Prof. Zhen Gao gave a speech on RISTA (<a href="bilibili.com/video/BV1F14y1e7Pm" target="_blank">
+                        <font>RISTA 讲座录屏</font>
+                    </a>)
+                </li>
+
+                <li> <b>
+                        <font color="#FF0000">[2022.09]</font>
                     </b> One Paper was accepted by IEEE Trans. Vehicular Technology (
                     <a href="" target="_blank">
                         <font>IF = 6.239</font>
@@ -452,6 +459,26 @@
                         color="#FF0000">[R1], [R2]</font>, while the <mark>holographic RIS</mark>, the cutting-edge
                     archetecture of RIS, that supports the next generation <mark>Terahertz</mark> Massive MIMO
                     communications has also been studied <font color="#FF0000">[R3]</font>.
+                    <div class="panel panel-default">
+                        <div class="panel-heading">
+                            <h4 class="panel-title">
+                                <a data-toggle="collapse" data-parent="#accordion" href="#collapseEle">
+                                    <i class="fa fa-folder-open-o" aria-hidden="true">&nbsp;&nbsp;Click here to
+                                        unfold/fold video.</i>
+                                </a>
+                            </h4>
+                        </div>
+                        <div id="collapseEle" class="panel-collapse collapse">
+                            <div class="panel-body" style="position: relative; padding: 30% 45%;">
+                                <iframe
+                                    src="//player.bilibili.com/player.html?aid=773303941&bvid=BV1F14y1e7Pm&cid=839739368&page=1&as_wide=1&high_quality=1&danmaku="
+                                    scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true"
+                                    style="position: absolute; width: 90%; height: 90%; left: 45px; top: 30px;">
+                                </iframe>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- <iframe src="//player.bilibili.com/player.html?aid=773303941&bvid=BV1F14y1e7Pm&cid=839739368&page=1" scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true"> </iframe> -->
                     <details>
                         <summary>Related Work</summary>
 
@@ -719,16 +746,20 @@
                 <ul>
                     <!-- https://ieeexplore.ieee.org/abstract/document/9737291 -->
                     <p style="text-indent: -2.0rem;margin-left: 0rem;">
-                        <span>[42] Z. Gao, Z. Wan, D. Zheng, S. Tan, C. Masouros, D. W. K. Ng, and S. Chen, "Integrated Sensing and Communication with mmWave Massive MIMO: A Compressed Sampling Perspective," accepted by IEEE Transactions on Wireless Communications, vol. 9, no. 18, pp. 17793-17807, 15 Sept.15, 2022.
+                        <span>[42] Z. Gao, Z. Wan, D. Zheng, S. Tan, C. Masouros, D. W. K. Ng, and S. Chen, "Integrated
+                            Sensing and Communication with mmWave Massive MIMO: A Compressed Sampling Perspective,"
+                            accepted by IEEE Transactions on Wireless Communications, vol. 9, no. 18, pp. 17793-17807,
+                            15 Sept.15, 2022.
                             [<a href="https://arxiv.org/pdf/2201.05766.pdf" target="_blank">arXiv</a>]
                         </span>
                     </p>
-                    
+
                     <p style="text-indent: -2.0rem;margin-left: 0rem;">
                         <span>[41] J. Huang, Y. Yang, Z. Gao, D. He and D. W. K. Ng, "Dynamic Spectrum Access for
                             D2D-Enabled Internet of Things: A Deep Reinforcement Learning Approach," in IEEE Internet of
                             Things Journal, vol. 9, no. 18, pp. 17793-17807, 15 Sept.15, 2022.
-                            [<a href="https://ieeexplore.ieee.org/abstract/document/9737291" target="_blank">IEEE URL</a>]
+                            [<a href="https://ieeexplore.ieee.org/abstract/document/9737291" target="_blank">IEEE
+                                URL</a>]
                         </span>
                     </p>
 
