--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 
                 <li> <b>
                         <font color="#FF0000">[2022.09]</font>
-                    </b> Prof. Zhen Gao gave a speech on RISTA (<a href="bilibili.com/video/BV1F14y1e7Pm" target="_blank">
+                    </b> Prof. Zhen Gao gave a speech on RISTA (<a href="https://www.bilibili.com/video/BV1F14y1e7Pm" target="_blank">
                         <font>RISTA 讲座录屏</font>
                     </a>)
                 </li>
