--- a/index.html
+++ b/index.html
@@ -460,7 +460,7 @@
                     archetecture of RIS, that supports the next generation <mark>Terahertz</mark> Massive MIMO
                     communications has also been studied <font color="#FF0000">[R3]</font>.
                     <div class="panel panel-default">
-                        <div class="panel-heading">
+                        <div class="panel-heading2" background-color="#ff000030">
                             <h4 class="panel-title">
                                 <a data-toggle="collapse" data-parent="#accordion" href="#collapseEle">
                                     <i class="fa fa-folder-open-o" aria-hidden="true">&nbsp;&nbsp;Click here to
