--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <link rel="stylesheet" href="./Files/jemdoc.css" type="text/css" />
     <script src="jquery.min.js"></script>
     <link rel="shortcut icon" href="./Files/favicon.jpg">
-    <title>Zhen Gao (BIT) Research Homepage</title>
+    <title>Zhen Gao (BIT) Homepage</title>
 </head>
 
 
@@ -459,8 +459,8 @@
                         color="#FF0000">[R1], [R2]</font>, while the <mark>holographic RIS</mark>, the cutting-edge
                     archetecture of RIS, that supports the next generation <mark>Terahertz</mark> Massive MIMO
                     communications has also been studied <font color="#FF0000">[R3]</font>.
-                    <div class="panel panel-default">
-                        <div class="panel-heading2" background-color="#ff000030">
+                    <div class="panel2 panel-default">
+                        <div class="panel-heading">
                             <h4 class="panel-title">
                                 <a data-toggle="collapse" data-parent="#accordion" href="#collapseEle">
                                     <i class="fa fa-folder-open-o" aria-hidden="true">&nbsp;&nbsp;Click here to
