--- a/index.html
+++ b/index.html
@@ -459,7 +459,7 @@
                         color="#FF0000">[R1], [R2]</font>, while the <mark>holographic RIS</mark>, the cutting-edge
                     archetecture of RIS, that supports the next generation <mark>Terahertz</mark> Massive MIMO
                     communications has also been studied <font color="#FF0000">[R3]</font>.
-                    <div class="panel2 panel-default">
+                    <div class="panel panel-default">
                         <div class="panel-heading">
                             <h4 class="panel-title">
                                 <a data-toggle="collapse" data-parent="#accordion" href="#collapseEle">
