--- a/index.html
+++ b/index.html
@@ -730,8 +730,13 @@
                         </font>
                     </b>
                     <div align="center">
-                        <img src="./Files/x6.png" title="isac" alt="thz" width="85%"
-                            style="display:block; margin:0 auto;">
+                        <table><tr>
+                            <td><img src="./Files/x6.png" title="isac" alt="isac" width="40%"
+                                style="display:block; margin:0 auto;"></td>
+                            <td><img src="./Files/x6_2.png" title="isac" alt="isac" width="40%"
+                                style="display:block; margin:0 auto;"></td>
+                            </tr></table>
+                        
                     </div>
                     The Integrated Sensing and Communication (ISAC) is regarded as a promising paradigm shift for 6G
                     networks, aiming to develop novel hardware architectures and signal processing techniques for
